--- a/prosess/referanser.bib
+++ b/prosess/referanser.bib
@@ -1,5 +1,5 @@
-@inbook{schwartz,
-	author="Roger Schwartz",
+@inbook{schwarz,
+	author="Roger Schwarz",
 	title="The Skilled Facilitator",
 	chapter="5: Ground rules for effective groups",
 	publisher="Jossey-Bass",
@@ -7,9 +7,9 @@
 }
 
 @inbook{jj,
-	author="David W. Johnson \& Roger T. Johnson"
-	title="Multicultural Education and Human Relations: Valuing Diversity"
-	chapter="10: Valuing diversity"
-	publisher="Allyn \& Bacon"
+	author="David W. Johnson \& Roger T. Johnson",
+	title="Multicultural Education and Human Relations: Valuing Diversity",
+	chapter="10: Valuing diversity",
+	publisher="Allyn \& Bacon",
 	year="2001"
 }
