--- a/prosess/oppstart-utvikling.tex
+++ b/prosess/oppstart-utvikling.tex
@@ -13,11 +13,13 @@
 
 \section{Regler, avtaler, kontrakt}
 Nødvendigheten av å ha klare regler og avtaler innad i en gruppe diskuteres i
-mange av pensumartiklene. I \cite{schwartz} nevnes det som et av ni punktene
-avgjørende for en effektiv gruppe ``Etabler regler for hvordan avgjørerelser
-tas''. \cite{jj} påpeker hvor viktig det er at gruppa skaper seg en felles
-identitet, som hvert gruppemedlem kan samles bak. En samarabeidskontrakt, med
-regler for håndtering av konflikter etc., fungerer nettopp på dette viset -
+mange av pensumartiklene. I Schwarz' ``Ground rules for Effective Groups''
+\cite{schwarz} nevnes det som et av ni punkter avgjørende for en effektiv
+gruppe: ``Etabler regler for hvordan avgjørerelser
+tas''. Johnson \& Johnson påpeker i ``Valuing Diversity'' \cite{jj} hvor viktig det er at gruppa skaper seg en felles
+identitet, som hvert gruppemedlem kan samles bak. En samarbeidskontrakt, med
+regler for håndtering av konflikter, hvordan avgjørelser tas, straff for
+regelbrudd etc., fungerer nettopp på dette viset -
 samlende. 
 
 Andre landsbydag var det satt av tid til å skrive samarbeidskontrakt. Det ble, i
@@ -26,8 +28,8 @@ håndtere konflikter, ta avgjørelser og ikke minst - mål for gruppearbeid og
 tidsfrister. Etter noen uker ble kontrakten reforhandlet. Det viste seg at
 enkelte punkter var redundante, mens andre måtte legges til. Særs punktet om
 kaffemøtene før oppstart har vist seg effektivt, da det tilbyr en uhøytidelig
-stemning, hvor synspunkter kan drøftes under en uformell setting. Det ble i
-tillegg lagt merke til at gruppas enhetlige oversikt var manglende, og et nytt
+setting hvor synspunkter kan deles og diskuteres. Det ble i
+tillegg lagt merke til at gruppemedlemmenes individuelle oversikt var manglende, og et nytt
 punkt vedrørende fremdriftsplaner ble lagt til. Et eksempel på et punkt som
 utgikk var at alle oppgaver skulle føres inn på gruppas wiki-side, dette
 overlappet til en viss grad med det nye om fremdriftsplan.
