--- a/prosess/oppstart-utvikling.tex
+++ b/prosess/oppstart-utvikling.tex
@@ -20,7 +20,7 @@ tas''. Johnson \& Johnson påpeker i ``Valuing Diversity'' \cite{jj} hvor viktig
 identitet, som hvert gruppemedlem kan samles bak. En samarbeidskontrakt, med
 regler for håndtering av konflikter, hvordan avgjørelser tas, straff for
 regelbrudd etc., fungerer nettopp på dette viset -
-samlende. 
+samlende. $\\$
 
 Andre landsbydag var det satt av tid til å skrive samarbeidskontrakt. Det ble, i
 samsvar med læringsassistentene, satt opp punkter for hvordan gruppa skulle
@@ -32,7 +32,7 @@ setting hvor synspunkter kan deles og diskuteres. Det ble i
 tillegg lagt merke til at gruppemedlemmenes individuelle oversikt var manglende, og et nytt
 punkt vedrørende fremdriftsplaner ble lagt til. Et eksempel på et punkt som
 utgikk var at alle oppgaver skulle føres inn på gruppas wiki-side, dette
-overlappet til en viss grad med det nye om fremdriftsplan.
+overlappet til en viss grad med det nye om fremdriftsplan. $\\$
 
 Gruppa hadde også lagt merke til at punktet om tildelte oppgaver skulle føres
 inn på wiki-siden aldri ble brukt. At kun tre på gruppa (Joakim, Åsmund og Knut)
@@ -40,13 +40,37 @@ hadde kjennskap til github (stedet hvor gruppa lagrer informasjon) kan til dels
 ta skylden for det, i tillegg påvirket mangelen av en fremdriftsplan hvert
 gruppemedlems oppfatning av egne arbeidsoppgaver. Etter som tiden gikk ble det,
 forståelig nok, endel murring fra Paul og Turid, som følte at det var vanskelig
-å følge utviklingen da de ikke kunne bruke github. Gruppa satte seg da ned en
-søndag og hadde innføring i det, med det resultat at hele gruppa endelig kunne
-bruke tjenesten fullt ut.
+å følge utviklingen. Det ble derfor avtalt at gruppa skulle møtes førstkommende
+søndag, slik at samtlige gruppemedlemmer skulle få en innføring i, samt lære seg
+bruken av github. 
 
 \section{Beslutningsmønstre}
-\lipsum{9-10}
+I gruppekontrakten (se Appendiks XXXX) står det at beslutninger fortrinnsvis
+skal tas basert på konsensus, mens det ved splid skal være flertallsavgjørelse.
+Gruppa var tidlig innstilt på konsensusavgjørelser, da det sørger for gode og
+grundige diskusjoner ved uenighet, og kan i den forstand virke veldig samlende
+for en gruppe. Likevel innså vi at enkelte situasjoner kunne bli fullstendig
+fastlåst, slik at flertallet måtte få bestemme. Det er likevel viktig at
+konsensus har blitt \emph{forsøkt} oppnådd før flertallsavgjørelse
+implementeres. $\\$
 
+Den første avgjørelsen gruppa tok var valg av oppgave. Åsmund var i starten
+veldig giret på skiforsøket. Som gikk ut på å måle spenstforfallet i en
+slalomski utover sesongen. Resten av gruppa var noe mer moderate i
+begeistringen. Det ble derfor arrangert ``høring'' hvor samtlige gruppemedlemmer
+kom med forslag. Disse ble så samlet og diskutert, og gruppa forsøkte å finne en
+oppgave hvor alle kunne bidra. Valget falt derfor på steking av bacon i
+microbølgeovn. Da dette hadde et massivt innslag av numerikk, programmering og
+fysikk. Disipliner gruppa dekte meget godt mellom seg. $\\$
+
+I samarbeidskontrakten er gruppestrukturen betegnet som ``riddere av det runde
+bord''. Dette er et prinsipp som anvendes i alle våre beslutninger. Når et
+problem oppstår går ordet rundt bordet, og hvert gruppemedlem sier sin mening.
+Det diskuteres deretter i plenum, og om mulig oppnås en konsensusavgjørelse. Vi
+har kun ved ett tilfelle anvendt flertall-paragrafen i kontrakten og det var i
+forbindelse med språkvalg på prosessrapporten. Knut var i utgangspunktet uvillig
+til å skrive på norsk, og det gikk ikke å ``vinne'' han over. Etter noen
+minutter med diskusjon ble altså Knut Halvor overstyrt.
 \section{Roller vi tok}
 \lipsum{9-10}
 
