--- a/rapport/references.bib
+++ b/rapport/references.bib
@@ -3,7 +3,7 @@
 	booktitle={Antennas and Propagation Society International Symposium,
 		2005 IEEE}, title={Microwave oven field uniformity analysis},
 	year={2005},
-	month=july,
+	month=July,
 	volume={3B},
 	number={},
 	pages={ 217 - 220 vol. 3B},
@@ -41,4 +41,26 @@ keywords = "Food",
 keywords = "Line heat source"
 }
 
+@article{namba,
+	title="Low Voltage Magnetron for Microwave Ovens",
+	journal="Journal of Microwave Power",
+	volume="16",
+	number="3",
+	pages="257 - 261",
+	year="1981",
+	author="I. Namba and N. Tashiro and M. Kume and T. Kawaguchi and T. Azuma"
+}
 
+
+@misc{intarwebz,
+	Author="Erik Christensen",
+	Howpublished={\url{http://www.timesoftheinternet.com/absolutely-scrumptious/how-to-make-crispy-bacon/}},
+	Title="How to Make Crispy Bacon"
+}
+
+@article{maillard,
+	title="Genèse des Matières Protéiques et des Matières Humiques",
+	institution="Faculté de Médecine de Paris",
+	year="1913",
+	author="Louis Camille Maillard"
+}
