--- a/rapport/introduction.tex
+++ b/rapport/introduction.tex
@@ -1,9 +1,12 @@
 \chapter{Introduction}
+%In this chapter, we don't need numbering of subsections (there are none).
+\setcounter{secnumdepth}{1}
+
 \section{Problem formulation}
 The problem considered in this project is the preparation of bacon in a microwave oven. Bacon is
 defined as cured meat from side and back cuts of a pig. A microwave oven in this context is a
-household appliance typically delivering 750W of microwave effect at a frequency of 2.1 GHz
-to a Faraday cage of volume 200 liters. 
+household appliance typically delivering 750 W of microwave effect at a frequency of 2.1 GHz
+to a Faraday cage of volume 40 liters. 
 
 The motivation for the problem formulation was clear. As soon as modeling of food preparation was
 brought on the table, bacon seemed a prime choice. A microwave oven may seem an odd choice for
@@ -24,46 +27,39 @@ were formulated:
   \item How does water and fat content affect the preparation, and what preparation time is optimal?
 \end{itemize}
 
+\section{Reasoning behind the problem formulation}
 The first question is obvious, as any attempt at predicting the preparation time necessitates a
-numerical model of bacon in a microwave oven; a simple glance at the relevant equations 
+numerical model of bacon in a microwave oven; a simple glance at the relevant
+equations tells the experienced numerics person that no analytical solution
+exists. With a numerical solution of the heat and mass transport equations, the
+optimal preparation time can be predicted. But this presumes an understanding of
+what makes good bacon. So what does?
 
+Work done by \cite{intarwebz} and \cite{maillard} suggest that two factors are important in
+determining good bacon. The first is a high enough temperature that the Maillard
+reaction can take place, which happens around 140$^{circ}$C. The second is that
+a significant proportion of the fat has melted and has been transported out of
+the bacon. Both of these factors are naturally affected by the composition of
+the bacon; especially water and fat content will play a major role.
 
-Det første spørsmålet var naturlig å stille, for om baconet skal være optimalt stekt, må vi kunne
-beskrive hvordan baconet utvikler seg i en mikrobølgeovn. Dette kan da hjelpe oss med å finne ut
-fort baconet blir stekt. Det andre spørsmålet er avgjørende for å få til et optimalt bacon. Siden
-det er mange typer bacon er det nødvendig å finne ut hvordan fett-, vann- og saltinnhold påvirker
-stekingen, fordi forskjellige typer bacon naturligvis utvikler seg annerledes under steking. Også
-hvilken effekt vi satte mikrobølgeovnen på vil nødvendigvis påvirke stekingen. En effekt som
-mikrobølgeovnen gir er ikke nødvendigvis lik den effekten som mottas av baconet. Egenskapene til
-mikrobølgeovnen er derfor en parameter i modellen. 
+Having identified these two factors as the important criteria for an optimal
+solution, experimental work is needed to determine the correlation between
+temperature and fat loss, and how finished bacon is. This is, of course, also a
+subjective question - different people prefer different grades of crispness.
 
-Når vi forsøker å få svar på disse spørsmålene er det naturlig å sette opp hva som er input og hva
-som er output i modellen. Som input har vi allerede nevnt fett-, vann- og saltinnholdet i baconet.
-Dette er input som vi kan få direkte fra baconpakningen. I tillegg er tykkelsen og geometrien av
-baconet viktige størrelser. Om vi skal steke mange baconskiver på en gang, vil det sannsynligvis ha
-betydning for stekingen, så antallet baconskiver vil også være en input. Effekten vi setter på
-mikrobølgeovnen vil være en input i modellen fordi det vil ha stor betydning på resultatet. Til
-slutt kan vi nevne ”ønsket sprøhet” som en mulig inputparameter fordi forskjellige folk har
-forskjellige meninger om hva som er det optimale bacon. Noen ønsker å ha baconet mer saftig, mens
-andre vil ha det sprøest mulig. Når inputparametrene er satt inn i modellen, trenger den bare å
-finne ut hvor lang tid vi trenger å steke baconet. Eneste output i modellen er derfor steketiden.
+Another experimental question is how much of the microwave effect that is
+absorbed by the bacon. The second law of thermodynamics dictates that some of
+the effect is lost in the microwave magnetron, the question is how much effect
+is dissipated in the bacon. This may include losses besides that of the
+magnetron, which has a typical efficiency of 65\% \cite{namba}. It turns out
+that common household microwave ovens are rated to include this loss,
+with standardized calibration procedures published by the IEC's SC 59K, so a 750 W
+microwave oven will typically draw 1.1 kW of electrical power from the mains
+socket. This means using the rated power will be good enough for our purposes.
 
-For å modellere steking av bacon i mikrobølgeovn, har vi tatt i betraktning hvordan baconet blir
-varmet opp, og hvordan fett- og vanninnholdet i baconet forandrer seg over tid. Åpenbare ligninger
-som kan brukes for å beskrive disse prosessene er varmeligningen og ligningen for massetransport.
-Med varmeligningen i tre dimensjonen vil vi kunne beskrive hvor fort baconet varmes opp.
-Temperaturen i baconet er nært knyttet til når det brunes opp. Med massetransportligningen vil vi
-finne ut hvor mye masse som trekkes ut av baconet. Den kan gjøre det mulig å finne kritisk massetap.
-Sammen vil ligningene ha betydning for hvor fort baconet blir stekt. Gitt varmeligningen og
-massetransportligningen er det også nødvendig å sette opp nøyaktige grensebetingelser for baconet i
-en mikrobølgeovn for at modellen skal være realistisk. Hvis modellen skulle beskrive prosessen i
-baconet godt nok, vil den kunne gi svar på hvor lang tid vi trenger å steke baconet gitt
-inputparametrene i modellen. For å verifisere at modellen er god, må det gjøres eksperimenter med
-samme inputparametre. De virkelige resultatene kan da brukes til å sammenligne med beregningene gitt
-av modellen. Dette er hovedmålet i oppgaven. 
+Finally, experiments are needed to verify the accuracy of the numerical results.
+As heat and mass transport is a Complicated Problem, this is not guaranteed a
+priori.
 
-Videre er det mulig å få modellen mer realistisk ved å sette elektromagnetiske grensebetingelser i
-modellen. Hvis alle disse målene nås innen god tid, vil gruppa også forsøke å lage en app for den
-reduserte modellen som kan gi svar på hvor lang tid man trenger å steke bacon i mikrobølgeovn for
-gitte inputparametre.
-
+%Reset secnumdepth for other chapters
+\setcounter{secnumdepth}{2}
