--- a/rapport/theory.tex
+++ b/rapport/theory.tex
@@ -9,7 +9,7 @@ GHz. To be modeled is the heat in the strip, phase transitions and transport.
   \begin{center}
     \includegraphics[width=0.4\linewidth]{physicists.png}
   \end{center}
-  \caption{Our initial approach to the problem}
+  \caption{Our initial approach to the problem. \url{xkcd.com/793}
   \label{fig:xkcd_physics}
 \end{figure}
 
@@ -41,7 +41,7 @@ with the radial power distribution on the form \cref{eq:effektfordeling},
 i.e. a fifth degree polynomial, interpolated from the results in \cite{huang+zhu}.
 
 Furthermore, there is the term $J^{Melt}$ which represents heat loss due to
-latent heat in the solid-liquid phase transition. This can be written as 
+latent heat absorbed in the solid-liquid phase transition. This can be written as 
 \[ \frac{L \rho}{T_2-T_1} \pd{T}{t} \rm{,} \quad T \in (T_1,T_2) \rm{,}\]
 where the fat is melting between the temperatures $T_1$ and $T_2$. For fat these
 are typically around 30-50$^\circ$C. For $T \notin (T1,T2)$ this term is zero,
@@ -52,12 +52,22 @@ complication.
 In the last of the heat equations, there also appears what is called a
 convective derivative, on the form $(\v{v}\cdot \grad{})T$. This is a somewhat
 more complicated term, and is essentially a modification due to transport of
-liquid fat implying an implicit transport of heat. However, in the staggered
-approach used here, the velocity field is considered as known when it comes to
-the heat equations.
+liquid fat implying an implicit transport of heat. But, we're in luck, boys! 
+
+As the bacon strip is essentially two-dimensional, transport will almost
+exclusively happen in the vertical (small) direction. In our approach, the
+source terms don't vary in the vertical direction, so this term will be a transport
+of heat in the vertical direction. This will not affect the heat transport in
+the horisontal directions.  As we're not really
+interested in the vertical temperature distribution, this means that we can
+happily neglect this term, in the spirit of Richard Feynmann: ``it doesn't give
+any new physics''.
+
 
 \section{The transport equations}
-
+The transport equation used in our approach is the one-dimensional Navier Stokes
+equation, with the additional assumptions of an incompressible, Newtonian flow.
+This leads to the equation \cref{
 
 
 
