Fikset på cosinus-ledd.

--- a/rapport/numerics.tex
+++ b/rapport/numerics.tex
@@ -82,7 +82,7 @@ $\frac{\Delta t}{\Delta x} < C$, with C a constant. }
 Dividing  by $\xi^ne^{i\beta x_j}$, and using $x_{j+1} = x_j + h$ one obtains    %\href{eq:crank-D}
 \begin{eqnarray*}
 \xi\left[1-D\left(2\cos{\beta h} - 2\right)\right] &=& 1 - 2D\left(1-\cos{\beta h}\right) \\
-\cos{\beta h} &=& \frac{1}{2}\left(1-\sin^2{\frac{\beta h}{2}}\right) \\
+\cos{\beta h} &=& 1-2\sin^2{\frac{\beta h}{2}} \\
 \xi\left(1+4D\sin^{2}{\frac{\beta h}{2}}\right) &=& 1 - 4D\sin^2{\frac{\beta h}{2}} \\
 \xi &=& \frac{1-4D\sin^2{\frac{\beta h}{2}}}{1+4D\sin^2{\frac{\beta h}{2}}}
 \end{eqnarray*}
