Utvidet bit om Schwarz

--- a/prosess/teori.tex
+++ b/prosess/teori.tex
@@ -1,6 +1,6 @@
 \chapter{Teori}
-\section{Schwarz}
-\subsection{Gruppeeffektivitet}
+\section{Schwarz - gruppeteori}
+\subsection{Effektivitet}
 
 
 Flere faktorer påvirker en gruppes effektivitet; har gruppen et klart mål? Er
@@ -34,7 +34,15 @@ vil bli ineffektiv.
 Videre beskrives måter en gruppe kan sikre seg effektivitet. En effektiv gruppe
 håndterer konflikter i det åpne, og baserer seg på antagelsen om at hver enkelt
 medlem er sterk nok til å takle negativ tilbakemelding. I tillegg er det viktig
-å ikke bare løse konflikten, men også finne ut hva som forårsaket den. 
+å ikke bare løse konflikten, men også finne ut hva som forårsaket den. $\\$
+
+Det er også viktig at man kommuniserer på en slik måte at mottaker og avsender
+har samme oppfatning av hva som blir sagt. Altså må man passe på at det man sier
+blir oppfattet korrekt, dette kan oppnås ved å ikke bare avsløre hva du har
+funnet ut, men også \emph{hvordan} du kom til den konklusjonen. Ved å bruke
+denne kommunikasjonsmetoden oppmuntres andre til å finne ``hull'' i logikk og
+løsningsmetode, i tillegg til at mottaker blir tvunget til å komme med
+motargumenter.
 
 % Lurer på om dette ikke er en forlengelse av de syv grunnreglene. Mulig det er
 % smart å skrive de to samlet.
