--- a/prosess/oppstart-utvikling.tex
+++ b/prosess/oppstart-utvikling.tex
@@ -76,10 +76,11 @@ minutter med diskusjon ble altså Knut Halvor overstyrt.
 
 %" Lederskap begynner med ein formel rolle struktur som definerer gruppe hierakiet av autoritet.(Authority; legitimate power assigned to a particular position.)
 
-I gruppekontrakten blei det bestemt at me skulle ha ein flatstruktur i gruppa. Valget var basert på at ingen egentlig ville gå inn i ein lederrolle, og at me ville ha ein større frihet til å formulere arbeidsoppgåvene sjølv. Me kom likevel opp i situsjoner som krevde at ein person tok ledelse for å sikre effektiviteten til gruppa. I praksis fekk gruppa ein situasjonsbetinget lederstruktur.
+I gruppekontrakten blei det bestemt at me skulle ha ein flatstruktur i gruppa. Valget var basert på at ingen egentlig ville gå inn i ein lederrolle, og at me ville ha ein større frihet til å formulere arbeidsoppgåvene sjølv. Me kom likevel opp i situsjoner som krevde at ein person tok ledelse for å sikre effektiviteten til gruppa. 
+\emph{her må vi ha et eksempel} I praksis fekk gruppa ein situasjonsbetinget lederstruktur.
 
 \subsection{Litt teori}
-Situsjonsbetinget lederskap er definert som delt lederskap blant gruppemedlemmer der medlemmene varierer oppførselen etter kva funksjon gruppa treng til ein kvar tid. Ein funksjon er ein aksjon som blir sett igang for å sikre effektiviteten i gruppa. Me kan snakke om to typer aksjoner; oppgåveretta aksjoner og relasjonsretta/samholdsretta (relationship) aksjoner. 
+Situasjonsbetinget lederskap er definert som delt lederskap blant gruppemedlemmer der medlemmene varierer oppførselen etter kva funksjon gruppa treng til ein kvar tid. Ein funksjon er ein aksjon som blir sett igang for å sikre effektiviteten i gruppa. Me kan snakke om to typer aksjoner; oppgåveretta aksjoner og relasjonsretta/samholdsretta (relationship) aksjoner. 
 
 I Robert-Bales interaksjon prosess analyse trekk han fram at i ein gruppe er det ofte nokon som intrer i rolla som oppgåve-leder og ein som trer inn i rolla som sosial-emosiell leder. Kjenneteiknet på ein oppgåve-leder er at det er ofte han som setter igang aksjoner for å sikre at målet til gruppa blir nådd (oppgåveretta aksjoner), mens den sosiall-emosielle lederen setter igang aksjoner for å oppretthalde og forbedre interrelasjonene i gruppa (relasjonsretta aksjoner).
 
@@ -90,7 +91,7 @@ Bales staturer og at medlemmer som er veldig oppgåvefokusert er mindre innvolve
 Den som oftas gjekk inn i rolla som sosial-emosionell leder var Turid. Ho var eit viktig ledd i gruppa i form av å uttrykke klare meininger og frustrasjoner over moment i gruppa som ikkje fungerte optimalt. Når det var ting som fungerte bra i gruppa kom ho inn med støtte og oppmuntring til å fortsette på samme linje. Sjølv om ho var ein av dei som oftest var innvolvert i diskusjoner/konflikter, var ho og ofte den som løyste dei, enten gjennom forhandlinger eller ved å trekkje seg tilbake når ho gjekk for langt. Turid var og det medlemmet i gruppa som oftes tok initiativ og ledelse i prossessdelen av EIT, som fokuserer mest på relasjoner og samarbeid mellom medlemmer på gruppa. 
 Situasjon: Paul og Turid.
 
-Bale's statuerer og at sosial-emotionell aksjoner ofte blir igangsatt av medlemmer som er mindre involvert i oppgåveretta aksjoner. Dette ser me igjen i gruppa ved at Joakim har innført fleire sosial-emosjonelle aksjoner. Denne situasjonen har oppstått ved at prosjektet har havnet noko utenfor hans fagfelt. Han er dermed blitt mindre involvert i sjølve oppgåveløysninga. Derimot har han vore eit viktig tillegg i gruppa når det gjeld det sosiale samhaldet i gruppa. Han har vore den personen som i størst grad har bidratt til den lette tonen mellom medlemmene, og har tilrettelagt for at medlemmene i gruppa har blitt betre kjent. Dette har han gjort blant anna ved å alltid stille med ein positiv innstilling og involvere gruppa i diskusjoner som går på andre ting enn kun det faglige.
+Bale statuerer og at sosial-emosjonelle aksjoner ofte blir igangsatt av medlemmer som er mindre involvert i oppgåveretta aksjoner. Dette ser me igjen i gruppa ved at Joakim har innført fleire sosial-emosjonelle aksjoner. Denne situasjonen har oppstått ved at prosjektet har havnet noko utenfor hans fagfelt. Han er dermed blitt mindre involvert i sjølve oppgåveløysninga. Derimot har han vore eit viktig tillegg i gruppa når det gjeld det sosiale samhaldet i gruppa. Han har vore den personen som i størst grad har bidratt til den lette tonen mellom medlemmene, og har tilrettelagt for at medlemmene i gruppa har blitt betre kjent. Dette har han gjort blant anna ved å alltid stille med ein positiv innstilling og involvere gruppa i diskusjoner som går på andre ting enn kun det faglige.
 
 
 Når det gjeld å løse opp spenninga på gruppa, spela alle medlemmene på gruppa ei viktig rolle ved å leggje ann ein uformell tone i gruppa.
