endret futhark.sty, opprettet rapport.sty og prosess.sty

--- a/rapport/references.bib
+++ b/rapport/references.bib
@@ -64,3 +64,20 @@ keywords = "Line heat source"
 	year="1913",
 	author="Louis Camille Maillard"
 }
+
+@article{poirier,
+	title="Permeability for Flow of Interdendritic Liquid in Columnar-Dendritic Alloys",
+	journal="Met. Trans. B.",
+	volume="18B",
+	pages="245-256",
+	year="1987",
+	author="D. R. Poirier"
+}
+@article{brent,
+	title="The Enthalpy Porosity Approach for Modeling Convection-Diffusion Phase Change",
+	journal="Numerical Heat Transfer",
+	volume="13",
+	pages="297-318",
+	year="1988",
+	author="A. D. Brent and V. R. Voller and K. J. Reid"
+}
