--- a/futhark.sty
+++ b/futhark.sty
@@ -35,109 +35,15 @@ citecolor=green  %siteringer
 \renewcommand\marginpar[1]{\-\oldmarginpar[\raggedleft\footnotesize #1]%
 {\raggedright\footnotesize #1}}
 
-
 %Oppsett for fancyhdr-pakken
 \setlength{\headheight}{15.2pt}
 %Vi reformaterer \leftmark og \rightmark slik at de ikke er skrevet med bare store bokstaver:
 \renewcommand{\chaptermark}[1]{\markboth{#1}{}}
 \renewcommand{\sectionmark}[1]{\markright{#1}{}}
 
-%Ting som vi bruker i forsidene
+%Futhark-logoen
 \newlength{\drop}
 \providecommand*{\wb}{{\textarl{ \withlines futhark}}}
-
-%Forside for prosess, settes inn med \forsideProsess
-\newcommand*{\forsideProsess}{\begingroup
-\drop = 2\baselineskip
-\centering
-\vspace*{\drop}
-{\Huge PROSESSRAPPORT}\\[\drop]
-\wb\\[\drop]
-{\Large\itshape Numeriske Simuleringer og Eksperimenter med}\\[\baselineskip]
-{\Large STEKING AV BACON I MIKROBØLGEOVN}\\[\baselineskip]
-\wb\\[\baselineskip]
-{\Large\itshape EiT - Matematikk Innen Anvendelser}\\[\baselineskip]
-{\Large gruppe 5 - FU\TH ARK - \textarn{futhark} - \wb}\par
-\vfill
-\wb\\[\drop]
-{\Large \textsc{Åsmund Ervik, Joakim Johnsen, Knut Halvor Skrede, Turid
-Schoonderbeek Solberg, Paul Vo}}\\
-\vspace*{\drop}
-{\scshape 2011}\par
-\vspace*{\drop}
-\endgroup}
-
-%Forside for rapport, settes inn med \forsideRapport
-\newcommand*{\forsideRapport}{\begingroup
-\drop = 2\baselineskip
-\centering
-\vspace*{\drop}
-{\Huge RESULTS}\\[\drop]
-\wb\\[\drop]
-{\Large\itshape Numerical Simulations and Experiments with}\\[\baselineskip]
-{\Large BACON PREPARATION IN A MICROWAVE}\\[\baselineskip]
-\wb\\[\baselineskip]
-{\Large\itshape EiT - Matematikk Innen Anvendelser}\\[\baselineskip]
-{\Large gruppe 5 - FU\TH ARK - \textarn{futhark} - \wb}\par
-\vfill
-\wb\\[\drop]
-{\Large \textsc{Åsmund Ervik, Joakim Johnsen, Knut Halvor Skrede, Turid
-Schoonderbeek Solberg, Paul Vo}}\\
-\vspace*{\drop}
-{\scshape 2011}\par
-\vspace*{\drop}
-\endgroup}
-
-
-%\abstract{} er ikke definert når vi bruker book-stilen.
-%vi lager vårt egen \sammendragNo{} og sammendragEn{} (norsk/engelsk):
-\newcommand{\sammendragNo}[1]{
-\section*{
-\centering \textbf{\Large{Sammendrag}}}
-  \begin{quotation}
-    \noindent 
-    #1
-  \end{quotation}
-\clearpage
-}
-\newcommand{\sammendragEn}[1]{
-\section*{
-\centering \textbf{\Large{Abstract}}}
-  \begin{quotation}
-    \noindent 
-    #1
-  \end{quotation}
-\clearpage
-}
-
-%\forord{} lager forordet for oss. engelsk og norsk versjon.
-\newcommand{\forordNo}[1]{
-\begin{flushleft}
-\textbf{\Large{Forord}}
-\end{flushleft}
-#1
-\begin{flushright}
-Åsmund Ervik, Joakim Johnsen, Paul Vo,\\ Knut Halvor Skrede, Turid Schoonderbeek Solberg
-\\ \textit{ \today}
-\end{flushright}
-}
-\newcommand{\forordEn}[1]{
-\begin{flushleft}
-\textbf{\Large{Preface}}
-\end{flushleft}
-#1
-\begin{flushright}
-Åsmund Ervik, Joakim Johnsen, Paul Vo,\\ Knut Halvor Skrede, Turid Schoonderbeek Solberg
-\\ \textit{ \today}
-\end{flushright}
-}
-
-%vi bruker f.eks. person{Åsmund} som overskrift i medlemmer-kapittelet istedet for \section{Åsmund}.
-\newcommand{\person}[1]{
-\phantomsection
-\addcontentsline{toc}{section}{#1}
-\section*{#1}
-}
 
 %Vi definerer \kapittelstil, som gjør oppsettet for kapitlene.
 \newcommand{\kapittelstil}{
