liten smurf i prosess.tex

--- a/prosess.sty
+++ b/prosess.sty
@@ -1,5 +1,5 @@
 %Forside for prosess, settes inn med \forsideProsess
-\newcommand*{\forsideProsess}{\begingroup
+\newcommand*{\forside}{\begingroup
 \drop = 2\baselineskip
 \centering
 \vspace*{\drop}
@@ -50,4 +50,5 @@ Schoonderbeek Solberg, Paul Vo}}\\
 \section*{#1}
 }
 
+%Oppsett for cleverref-pakken, slik at vi får norske navn på ting:
 
