--- a/prosess/teori.tex
+++ b/prosess/teori.tex
@@ -42,7 +42,48 @@ blir oppfattet korrekt, dette kan oppnås ved å ikke bare avsløre hva du har
 funnet ut, men også \emph{hvordan} du kom til den konklusjonen. Ved å bruke
 denne kommunikasjonsmetoden oppmuntres andre til å finne ``hull'' i logikk og
 løsningsmetode, i tillegg til at mottaker blir tvunget til å komme med
-motargumenter.
+motargumenter. Effektive grupper tester også ut sine antagelser, det vil si at
+dersom et gruppemedlem sier noe svarer mottaker med å fortelle hva han/hun tror
+den andre mente. Man minimerer da muligheten for misforståelser og videre
+frustrasjon. $\\$
 
-% Lurer på om dette ikke er en forlengelse av de syv grunnreglene. Mulig det er
-% smart å skrive de to samlet.
+Effektive grupper må også ha klare definerte rammer for oppgaven som skal løses, 
+det er også viktig at hvert gruppemedlem kjenner (og klarer å uttrykke) denne
+oppgaven. Gruppen må også sørge for at hvert medlem har en klar oppfatning av
+sin egen rolle i oppnåelsen av gruppeoppgaven. I samme omgang bør det sørges for
+at beslutningsprosesser og hierarki i gruppen er klart definert og forstått. $\\$
+
+En enkel, men god, måte og oppnå alle disse punktene på, er å bruke endel tid i
+starten på å få til en bra samarbeidskontrakt. Der hvor tema som lederskap,
+problemstilling, beslutningsmønstre, oppgavefordeling osv. kan innlemmes. Se
+\cref{sec:kontrakt}. Schwarz har kokt alt dette ned til 9 grunnregler som skal sørge for
+gruppeeffektivitet. Se \cref{sec:grunnregler}.
+\clearpage
+
+\subsection{Grunnregler}
+\label{sec:grunnregler}
+For å sikre effektivt gruppearbeid har Schwarz \cite{schwarz} etablert et sett
+med grunnleggende regler (\cref{tab:grunnregler}), dette sørger for at gruppa har et enkelt og
+oversiktlig oppslagsverk og vise til, for eksempel ved diskusjoner. I tillegg er
+det en god pekepinn på punkter som bør være i samarbeidskontrakten.
+\begin{center}
+\begin{table}[ht!]
+\begin{tabular}{r l}
+1. & Test antagelser og slutninger \\
+2. & Del \emph{all} relevant informasjon \\
+3. & Bruk spesifikke eksempler og bli enig om betydning av fremmedord \\
+4. & Forklar resonnement og intensjon. \\
+5. & Fokuser på interesser, ikke posisjon. \\
+6. & Kombiner støtte og granskning \\
+7. & Utform fremgangsplaner og tilbakemeldingsmåter i plenum. \\
+8. & Etabler metode for å ta opp ``ikke-tema''. \\
+9. & Bruk et beslutningsmønster som sørger for nødvendig engasjement. \\
+\end{tabular}
+\caption{Schwarz' regler for effektive grupper}
+\label{tab:grunnregler}
+\end{table}
+\end{center}
+
+\section{Johnson \& Johnson}
+\subsection{Gruppedynamikk}
+
