oppstart-utvikling.tex: fikk section 1 og 2 fra Paul

--- a/prosess/oppstart-utvikling.tex
+++ b/prosess/oppstart-utvikling.tex
@@ -2,11 +2,98 @@
 
 \chapter{Oppstart og utvikling}
 
-\section{Situasjon ved oppstart}
-\lipsum{1-2}
+\section{Situasjon ved oppstart} I første landsbydag fikk vi en kort
+introduksjon av konseptet bak landsbyen Mia. Vi fikk informasjon om oppgaver som
+hadde blitt gjennomført tidligere. Blant annet handlet en av oppgave om
+alpinski, og en annen om modellering av matlaging. Samme dag fikk vi tildelt
+gruppe; Turid, Paul og Åsmund fra Fysikk og matematikk, Joakim fra Bygg og
+miljøteknikk, og Knut Halvor fra Datateknikk. Vi bestemte gruppas navn, det ble
+Futhark. Resten av første landsbydag ble brukt til å diskutere hvilket tema vi
+hadde lyst på. Det var litt klein stemning i gruppa, men vi ble saktens kjent
+med hverandre. 
+
+Andre landsbydag ble brukt til videre diskusjon av tema. Ved siden av hadde vi
+en øvelse som gikk ut på å kartlegge kunnskapene til de enkelte gruppemedlemmene
+i gruppa. Dette ble gjort ved å at medlemmene førte på sine kunnskapsområder på
+en trekant med sider ”teoretisk”, ”faglige”, og ”personlige”. Bilde
+
+Med tanke på hva slags tema vi skulle velge, var dette en viktig øvelse siden
+det var viktig å vite hva gruppa var i stand til gjøre. Etter en del diskusjoner
+og annet prat hadde gruppa blitt bedre kjent, slik at folk torde å komme til
+uttrykk for sine meninger. 
+ 
+I tredje landsbydag ble det iverksatt en øvelse som gikk ut på å presentere våre
+erfaringer med gruppearbeid. Øvelsen var nyttig ettersom det gjorde det klart
+hva slags roller gruppemedlemmene foretrakk å ha i et gruppearbeid. Samtidig ble
+gruppa bedre kjent med hverandres arbeidsvaner. Samme dag fikk gruppen i oppgave
+å tilegne seg teorien til "Schwarz" grupperegler. Teorien ble utført ved at
+hvert enkelt gruppemedlem skulle presentere nevnte teori for hverandre. Av
+Schwarz’ grupperegler var kanskje de viktigste etter vår mening de to første; at
+man tester sine antakelser og at man deler all relevant informasjon.  Vi fikk
+erfare at når man ignorer disse reglene får det konsekvenser for
+gruppedynamikken mye raskere enn vi hadde trodd. Det oppstod to spesifikke
+konflikter som følge av dette som vi vil nevne her.
+
+Turid sa at hennes beste erfaring med gruppearbeid var fra håndball, noe Joakim
+lo av. Det ble litt dårlig stemning, men diskusjonen ble hysjet ned av
+fasilitatorene siden vi skulle gjøre individuelle oppgaver. Så emnet lå og
+murret under overflaten til vi fikk snakke fritt igjen, da ble konflikten løst;
+Turid sluttet av Joakims latter at det var hånlig ment, men det ble avklart at
+Joakim ikke mente noe vondt med latteren.
+
+Her er en annen situasjon. Åsmund gjespet gjentatte ganger mens Turid
+presenterte sitt tema fra Schwarz’ teorier, men sluttet med det da nestemann
+skulle presentere sitt.  Dette ble fort oppklart, Åsmund var trøtt.
+
+Med disse eksemplene kan man se at konfliktene oppstod på grunn av
+feiltolkninger; man hadde ikke kartlagt intensjonene bak det oppfattede
+budskapet. Dette ble løst gjennom åpen diskusjon og deling av sine intensjoner
+bak handlingene.  Etter de første landsbydagene hadde gruppa blitt godt kjent
+med hverandre. Det var klart hva de enkelte gruppemedlemmene var god på, og
+hvilke roller hver enkelte sannsynligvis ville ha i gruppesammenheng. Dermed var
+alt tilrettelagt for gruppa til å velge oppgavetema.
 
 \section{Formulering av problemstillingen}
-\lipsum{3-4}
+
+Til å begynne med vurderte gruppa "ski" som tema for oppgaven. Ettersom Åsmund
+stod mye på ski var dette en oppgave som interesserte ham veldig. De andre i
+gruppa som ikke hadde så mye kunnskap om dette temaet var litt mer usikre. Det
+ble diskutert de forskjellige problemene som kunne oppstå hvis vi valgte dette
+som tema. Særlig Turid var kritisk, og det ble klart at det var flere
+strukturelle utfordringer knyttet til denne oppgaven. De fleste i gruppa var
+skeptiske fordi oppgaven virket komplisert og uklart definert. Gruppa kom til
+slutt fram til at det var mange potensielle problemer som kunne oppstå hvis vi
+valgte denne oppgaven.
+
+Ny oppgave som ble foreslått skulle ha noe med mat å gjøre, da dette var et av
+de tre hovedtemaene som ble presentert på første landsbydag. Etter en lang
+diskusjon av problemstilling kom noen av medlemmene på temaet steking av bacon i
+mikrobølgeovn. Dette var en oppgave som skapte stor entusiasme blant alle
+gruppemedlemmene. Vi kom frem til at det var få kompliserte utfordringer knyttet
+til denne problemstillingen. Oppgaven virket som en spennende ide også fordi det
+passet bra med gruppas kunnskaper. Det virket som om oppgaven inkluderte en del
+numerikk og fysisk forståelse, noe som passet med de fleste gruppemedlemmene.
+Oppgaven inkluderte også visualisering av resultatet, noe som passet med Knut
+Halvor fordi han hadde drevet med noe lignende tidligere. Derfor endte det hele
+med at vi valgte dette som tema i prosjektet.
+
+Videre ble det anskaffet en del litteratur slik at vi kunne finne ut hva vi
+kunne gjøre. Vi fant ut at det fantes en del publikasjoner rundt dette temaet.
+Mye tid ble derfor brukt til å finne litteratur til å gi oss en ide om hvordan
+vi skal gå løs på oppgaven. For å lette på samarbeidet mellom gruppemedlemmene
+ble det satt opp en konto slik at vi kunne dele kode og annet informasjon via
+internettet. Da oppgaven var klar skulle gruppen spissen inn på
+problemstillingen ytterligere.
+
+I fjerde landsbydag fikk gruppen i oppgave å presentere oppgaven vi hadde valgt,
+og litt hvordan vi skulle løse den. Dette medførte til at gruppen ble mer
+fokusert på hva vi skulle gjøre. Ettersom det begynte å bli en del ting å gjøre,
+satt tok Turid en aksjon og delte ut oppgaver gruppemedlemmene skulle gjøre til
+neste dag. Dette gjorde hun fordi hun var frustrert over manglende initiativ.
+Med presentasjonen av problemstilling ble det klart hva gruppa skulle gjøre, hva
+som var gruppas hovedmål, og hva som kunne gjøres videre hvis vi skulle få
+ekstra tid.
+
 
 \section{Opprinnelig plan}
 \lipsum{5-6}
