Har fikset slik at cleveref blir på norsk. Hvis cleveref klager over at den ikke har norsk, bruk cleveref-patch.sty og kopier den inn i cleveref.sty-filen i LaTeX-distribusjonen din.

--- a/futhark.sty
+++ b/futhark.sty
@@ -13,7 +13,7 @@
 \usepackage{amsthm} 	%Teoremer
 \usepackage{amssymb}	%Matematiske symboler
 \usepackage{multicol}	%Flere kolonner
-\usepackage{cleveref}	%Bedre referanser med \label og \cref
+%\usepackage{cleveref}
 \usepackage{../coffee2}
 \usepackage{subfig}
 %Færre orddelinger ved linje-
