--- a/prosess.sty
+++ b/prosess.sty
@@ -1,3 +1,6 @@
+%Slik at vi får norske navn på ting:
+\usepackage[norsk]{cleveref}
+
 %Forside for prosess, settes inn med \forsideProsess
 \newcommand*{\forside}{\begingroup
 \drop = 2\baselineskip
@@ -50,5 +53,4 @@ Schoonderbeek Solberg, Paul Vo}}\\
 \section*{#1}
 }
 
-%Oppsett for cleverref-pakken, slik at vi får norske navn på ting:
 
