--- a/rapport.sty
+++ b/rapport.sty
@@ -1,3 +1,6 @@
+%Last pakker som må være enten engelsk eller norsk:
+\usepackage{cleveref}
+
 %Forside for rapport, settes inn med \forside
 \newcommand*{\forside}{\begingroup
 \drop = 2\baselineskip
