--- a/rapport/main.tex
+++ b/rapport/main.tex
@@ -1,4 +1,4 @@
-\documentclass[11pt,english,a4paper]{book}
+\documentclass[11pt,a4paper]{book}
 \usepackage{../futhark} %I denne filen har vi alt av \usepackage osv.
 \usepackage{../rapport}
 
