--- a/prosess/oppstart-utvikling.tex
+++ b/prosess/oppstart-utvikling.tex
@@ -3,15 +3,14 @@
 \chapter{Oppstart og utvikling}
 
 \section{Situasjon ved oppstart}
-\lipsum{1-2}
+
 
 \section{Formulering av problemstillingen}
-\lipsum{3-4}
 
 \section{Opprinnelig plan}
-\lipsum{5-6}
 
 \section{Regler, avtaler, kontrakt}
+\label{sec:kontrakt}
 Nødvendigheten av å ha klare regler og avtaler innad i en gruppe diskuteres i
 mange av pensumartiklene. I Schwarz' ``Ground rules for Effective Groups''
 \cite{schwarz} nevnes det som et av ni punkter avgjørende for en effektiv
@@ -101,4 +100,4 @@ Humor!
 Den situasjonsbetinget lederskap strukturen førte og til at gruppemedlemmer tok rollen som leder i den fagdelen dei hadde mest autoritet på. Åsmund blei dermed ein uformell leder for fysikkdelen, Turid for numerikk delen og Knut for programeringsdelen i c++. Dei tok dermed ansvar for framgang og oppgåvedeling på desse områdene, og strukturerte samarbeidet mellom gruppemedlemmene på desse områdene. 
 
 \section{Tilbakeblikk}
-\lipsum{11-12}
+
