--- a/prosess/teori.tex
+++ b/prosess/teori.tex
@@ -86,4 +86,31 @@ det en god pekepinn på punkter som bør være i samarbeidskontrakten.
 
 \section{Johnson \& Johnson}
 \subsection{Gruppedynamikk}
+Gruppedynamikk handler om den vitenskapelige studien av oppførsel i grupper.
+Atferd i grupper, og forståelsen av den, er essensielt, da mennesker i all
+hovedsak er gruppedyr, det være seg i familien, blant venner eller på jobb. Det
+første som må læres er; ``hva er en gruppe?''. Spørsmålet er vanskeligere enn
+man skulle tro, og Johnson \& Johnson (J\&J) \cite{jj} viser til at sosiologene
+fortsatt ikke er enige om én definisjon. Likevel kan man si at en gruppe er en
+samling av minimun to personer, som relaterer med hverandre ansikt til ansikt.
+Samtlige individer i gruppa er også klar over at de er avhengige av de andre for
+å få jobben gjort, i tillegg til at det er klart definert \emph{hvem} som er med
+i gruppa. $\\$
+
+J\&J påstår videre at en gruppes produktivitet er avhengig av fem
+basiselementer:
+\begin{itemize}
+\item[$1.$] Positiv avhengighet blant medlemmer.
+\item[$2.$] Individuell ansvarsfølelse.
+\item[$3.$] Fremmende interaksjon.
+\item[$4.$] Fungerende sosiale antenner.
+\item[$5.$] Gode gruppeprosesser.
+\end{itemize}
+Hvis man i tillegg skal sørge for at gruppen er effektiv må gruppemedlemmene
+\textbf{(1)} Sørge for at gruppens felles mål anvender hvert medlems
+individuelle kompetanse, \textbf{(2)} forsikre at kommunikasjon mellom hverandre
+er nøyaktig og forstås korrekt, \textbf{(3)} etablere lederskap og/eller
+passende innflytelse, \textbf{(4)} implementere beslutningsmønstre som sørger
+for at samtlige medlemmer kommer med innslag, i tillegg til at hver enkelts
+resonnement og konklusjon er åpne for evaluering og analysering, \textbf{(5)} 
 
