--- a/prosess/teori.tex
+++ b/prosess/teori.tex
@@ -42,6 +42,7 @@ blir oppfattet korrekt, dette kan oppnås ved å ikke bare avsløre hva du har
 funnet ut, men også \emph{hvordan} du kom til den konklusjonen. Ved å bruke
 denne kommunikasjonsmetoden oppmuntres andre til å finne ``hull'' i logikk og
 løsningsmetode, i tillegg til at mottaker blir tvunget til å komme med
+
 motargumenter. Effektive grupper tester også ut sine antagelser, det vil si at
 dersom et gruppemedlem sier noe svarer mottaker med å fortelle hva han/hun tror
 den andre mente. Man minimerer da muligheten for misforståelser og videre
@@ -114,3 +115,6 @@ passende innflytelse, \textbf{(4)} implementere beslutningsmønstre som sørger
 for at samtlige medlemmer kommer med innslag, i tillegg til at hver enkelts
 resonnement og konklusjon er åpne for evaluering og analysering, \textbf{(5)} 
 
+
+% Lurer på om dette ikke er en forlengelse av de syv grunnreglene. Mulig det er
+% smart å skrive de to samlet.
