Delvis ferdig med første del J&J

--- a/prosess/teori.tex
+++ b/prosess/teori.tex
@@ -113,7 +113,8 @@ individuelle kompetanse, \textbf{(2)} forsikre at kommunikasjon mellom hverandre
 er nøyaktig og forstås korrekt, \textbf{(3)} etablere lederskap og/eller
 passende innflytelse, \textbf{(4)} implementere beslutningsmønstre som sørger
 for at samtlige medlemmer kommer med innslag, i tillegg til at hver enkelts
-resonnement og konklusjon er åpne for evaluering og analysering, \textbf{(5)} 
+resonnement og konklusjon er åpne for evaluering og analysering, \textbf{(5)}
+etabler metoder for å håndtere konflikter konstruktivt.$\\$ 
 
 
 % Lurer på om dette ikke er en forlengelse av de syv grunnreglene. Mulig det er
